# ozerpan_ercom_sync

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ozerpan_ercom_sync/: api.py  hooks.py  modules.txt  utils.py
ozerpan_ercom_sync/custom_api/: backup.py  dst.py  opt_genel.py  sales_order.py  sync_ercom.py  tes_detay.py  upload_file.py  utils.py
ozerpan_ercom_sync/custom_api/file_upload/: mly_file_upload.py  opt_file_upload.py  upload_file.py
ozerpan_ercom_sync/ozerpan_ercom_sync/custom/: bom.json  customer.json  item.json  item_barcode.json  packed_item.json  sales_order.json
ozerpan_ercom_sync/ozerpan_ercom_sync/doctype/opt_genel/: opt_genel.js  opt_genel.json  opt_genel.py  opt_genel_list.js  test_opt_genel.py
ozerpan_ercom_sync/ozerpan_ercom_sync/doctype/opt_genel_dst_list/: opt_genel_dst_list.json  opt_genel_dst_list.py
ozerpan_ercom_sync/ozerpan_ercom_sync/doctype/opt_genel_profile_list/: opt_genel_profile_list.js  opt_genel_profile_list.json  opt_genel_profile_list.py  test_opt_genel_profile_list.py
ozerpan_ercom_sync/ozerpan_ercom_sync/doctype/ozerpan_discount/: ozerpan_discount.json  ozerpan_discount.py
ozerpan_ercom_sync/ozerpan_ercom_sync/doctype/tesdetay/: tesdetay.js  tesdetay.json  tesdetay.py  tesdetay_list.js  test_tesdetay.py
ozerpan_ercom_sync/public/js/bom/: bom_list.js
ozerpan_ercom_sync/public/js/customer/: customer.js  customer_list.js
ozerpan_ercom_sync/public/js/item/: item_list.js
ozerpan_ercom_sync/public/js/sales_order/: sales_order.js  sales_order_list.js
ozerpan_ercom_sync/sales_order_hooks/: validate.py
